ficing issues